added payment gateway for paypal and created a confirmation page

--- a/src/assets/styles/forgotPassword.css
+++ b/src/assets/styles/forgotPassword.css
@@ -1,7 +1,7 @@
 .forgot-password-link {
     display: block;
     margin-top: 10px;
-    color: #007bff; /* Link color */
+    color: #007bff;
     text-decoration: underline;
   }
   
