added styling for various fages, created a new gallery page to display hotel pictures, and added logic for the admin to determine the availability of the room

--- a/src/assets/styles/confirmation.css
+++ b/src/assets/styles/confirmation.css
@@ -19,7 +19,7 @@
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: brown;
     color: white;
     border: none;
     border-radius: 5px;
@@ -27,6 +27,6 @@
   }
   
   .confirmation-page button:hover {
-    background-color: #45a049;
+    background-color: rgb(148, 89, 89)
   }
   
