prvented user from adding booking for previous dates and also made major styling for different pages

--- a/src/assets/styles/forgotPassword.css
+++ b/src/assets/styles/forgotPassword.css
@@ -1,7 +1,7 @@
 .forgot-password-link {
     display: block;
     margin-top: 10px;
-    color: #007bff;
+    color: #755613;
     text-decoration: underline;
   }
   
