--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -3,8 +3,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
-  background-color: #f8f9fa;
+  background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
 .logo {
@@ -12,8 +13,15 @@
   height: auto;
 }
 
+.hamburger {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 .navigation {
   flex-grow: 1;
+  display: flex;
 }
 
 .navList {
@@ -27,7 +35,7 @@
 .navLink {
   margin: 0 15px;
   text-decoration: none;
-  color: #007bff;
+  color: #8B4513;
   font-weight: bold;
 }
 
@@ -50,7 +58,7 @@
 .facilitiesLink {
   margin: 0 10px;
   text-decoration: none;
-  color: #007bff;
+  color: #8B4513;
 }
 
 .authButtons {
@@ -63,7 +71,7 @@
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
-  background-color: #007bff;
+  background-color: #c69c6d;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -71,5 +79,61 @@
 
 .signUpButton:hover,
 .loginButton:hover {
-  background-color: #0056b3;
+  background-color: #a76b4e;
+}
+
+
+@media (max-width: 900px) {
+  .hamburger {
+    display: block;
+  }
+
+  .navigation {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 1;
+    flex-direction: column;
+  }
+
+  .navigation.open {
+    display: flex;
+  }
+
+  .navList {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navLink {
+    margin: 10px 0;
+  }
+
+  .subNav {
+    display: none;
+  }
+}
+
+
+@media (max-width: 1200px) {
+  .navLink {
+    margin: 0 10px;
+  }
+
+  .facilitiesNav {
+    margin-right: 10px;
+  }
+
+  .authButtons {
+    flex-direction: column;
+  }
+
+  .signUpButton,
+  .loginButton {
+    margin-left: 0;
+    margin-top: 10px;
+  }
 }
