--- a/src/assets/styles/roomList.css
+++ b/src/assets/styles/roomList.css
@@ -22,6 +22,14 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s, box-shadow 0.2s;
 }
+.search-input {
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 30%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
 
 .room-item:hover {
   transform: translateY(-3px);
